# package_spectrumtools

./: README.md  pyproject.toml
src/spectrumtools/: denoise.py  preprocess.py
src/spectrumtools/denoise/: kernel.py
