[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrumtools"
version = "0.0.3"
authors = [
{ name="Tanuj Chamil", email="tanujchamil@gmail.com" },
]
description = "SpectrumTools is a versatile spectroscopy software platform for comprehensive spectral data analysis and manipulation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
"Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/tanuj-chamil/package_spectrumtools"
"Bug Tracker" = "https://github.com/tanuj-chamil/package_spectrumtools/issues"
